--- a/assets/scss/foundation.scss
+++ b/assets/scss/foundation.scss
@@ -61,7 +61,7 @@
 
 /*
   My custom styles:
-  Add your scss files below to structure your project styles
+@import "../components/diverseworx/scss/diverse-nav.scss";
 */
 
 @import "site/global";
