--- a/assets/scss/foundation.scss
+++ b/assets/scss/foundation.scss
@@ -61,8 +61,8 @@
 
 /*
   My custom styles:
-@import "../components/diverseworx/scss/diverse-nav.scss";
 */
+@import "../components/diverseworx/scss/diverse-nav";
 
 @import "site/global";
 @import "site/wp-admin";
